Se agregaron clases

--- a/Cofre maravillo/Cofre maravillo.vcxproj
+++ b/Cofre maravillo/Cofre maravillo.vcxproj
@@ -127,7 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ElementosJuegos.cpp" />
+    <ClCompile Include="Enemigos.cpp" />
+    <ClCompile Include="Herramientas.cpp" />
+    <ClCompile Include="Items.cpp" />
     <ClCompile Include="Principal.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ElementosJuegos.h" />
+    <ClInclude Include="Enemigos.h" />
+    <ClInclude Include="Herramientas.h" />
+    <ClInclude Include="Items.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
